--- a/src/docs/asciidoc/example.adoc
+++ b/src/docs/asciidoc/example.adoc
@@ -1,7 +1,24 @@
+:hardbreaks:
+ifndef::snippets[]
+:snippets: ./build/generated-snippets
+endif::[]
+
+:toc: left
+
 = Product
 
 === 상품 목록
-operation::product-list[snippets='http-request,path-parameters,http-response,response-fields']
+`*Request*`
 
-=== 상품 등록
-operation::product[snippets='http-request,path-parameters,http-response,response-fields']
+include::{snippets}/product-list/http-request.adoc[]
+
+
+`*Response*`
+
+include::{snippets}/product-list/http-response.adoc[]
+
+`*Parameters*`
+
+include::{snippets}/product-list/request-parameters.adoc[]
+'''
+
