Feat: Response fields 추가하기 및 아스키독파일 위치 조정. 미리보는 html파일 [#44, #150]

--- a/src/docs/asciidoc/example.adoc
+++ b/src/docs/asciidoc/example.adoc
@@ -12,13 +12,17 @@ endif::[]
 
 include::{snippets}/product-list/http-request.adoc[]
 
+`*Parameters*`
+
+include::{snippets}/product-list/request-parameters.adoc[]
 
 `*Response*`
 
 include::{snippets}/product-list/http-response.adoc[]
 
-`*Parameters*`
+`*Fields*`
 
-include::{snippets}/product-list/request-parameters.adoc[]
+include::{snippets}/product-list/response-fields.adoc[]
+
 '''
 
