Feat: 이벤트 단건 조회 RestDocs 추가

--- a/src/docs/asciidoc/example.adoc
+++ b/src/docs/asciidoc/example.adoc
@@ -24,5 +24,20 @@ include::{snippets}/product-list/http-response.adoc[]
 
 include::{snippets}/product-list/response-fields.adoc[]
 
+
+=== 이벤트 조회 (단건)
+`*Request*`
+include::{snippets}/eventById/http-request.adoc[]
+
+`*Response*`
+
+include::{snippets}/eventById/http-response.adoc[]
+
+`*Fields*`
+
+include::{snippets}/eventById/response-fields.adoc[]
+
+
+
 '''
 
