--- a/src/docs/asciidoc/example.adoc
+++ b/src/docs/asciidoc/example.adoc
@@ -5,7 +5,7 @@ endif::[]
 
 :toc: left
 
-= Product
+== Product
 
 === 상품 목록
 `*Request*`
@@ -24,5 +24,112 @@ include::{snippets}/product-list/http-response.adoc[]
 
 include::{snippets}/product-list/response-fields.adoc[]
 
-'''
+== Order
+
+=== 주문 리스트
+
+`*Request*`
+
+include::{snippets}/get-order-list/http-request.adoc[]
+
+`*Parameters*`
+
+include::{snippets}/get-order-list/request-parameters.adoc[]
+
+`*Response*`
+
+include::{snippets}/get-order-list/http-response.adoc[]
+
+`*Fields*`
+
+include::{snippets}/get-order-list/response-fields.adoc[]
+
+=== 주문 수정
+
+`*Request*`
+
+include::{snippets}/update-order/http-request.adoc[]
+
+`*Parameters*`
+
+include::{snippets}/update-order/request-parameters.adoc[]
+
+`*Response*`
+
+include::{snippets}/update-order/http-response.adoc[]
+
+`*Fields*`
+
+include::{snippets}/update-order/response-fields.adoc[]
+
+=== 주문 배달 수정
+
+`*Request*`
+
+include::{snippets}/update-order-delivery/http-request.adoc[]
+
+`*Response*`
+
+include::{snippets}/update-order-delivery/http-response.adoc[]
+
+`*Fields*`
+
+include::{snippets}/update-order-delivery/response-fields.adoc[]
+
+== OrderInfo
+
+=== 주문 상세정보 생성
+
+`*Request*`
+
+include::{snippets}/create-orderinfo/http-request.adoc[]
+
+`*Parameters*`
+
+include::{snippets}/create-orderinfo/request-parameters.adoc[]
+
+`*Response*`
+
+include::{snippets}/create-orderinfo/http-response.adoc[]
+
+`*Fields*`
+
+include::{snippets}/create-orderinfo/response-fields.adoc[]
+
+=== 주문 상세정보 리스트
+
+`*Request*`
+
+include::{snippets}/get-orderinfo-list/http-request.adoc[]
+
+`*Parameters*`
+
+include::{snippets}/get-orderinfo-list/request-parameters.adoc[]
+
+`*Response*`
+
+include::{snippets}/get-orderinfo-list/http-response.adoc[]
+
+`*Fields*`
+
+include::{snippets}/get-orderinfo-list/response-fields.adoc[]
+
+=== 주문 상세정보 리스트
+
+`*Request*`
+
+include::{snippets}/get-orderinfo-list/http-request.adoc[]
+
+`*Parameters*`
+
+include::{snippets}/get-orderinfo-list/request-parameters.adoc[]
+
+`*Response*`
+
+include::{snippets}/get-orderinfo-list/http-response.adoc[]
+
+`*Fields*`
+
+include::{snippets}/get-orderinfo-list/response-fields.adoc[]
+
 
