--- a/src/docs/asciidoc/example.adoc
+++ b/src/docs/asciidoc/example.adoc
@@ -55,7 +55,7 @@ include::{snippets}/eventById/http-response.adoc[]
 
 include::{snippets}/eventById/response-fields.adoc[]
 
-=== 셀러 ID로 단건 조회
+=== 셀러 ID로 목록 조회
 
 `*Request*`
 
@@ -69,7 +69,7 @@ include::{snippets}/eventBySellerId/http-response.adoc[]
 
 include::{snippets}/eventBySellerId/response-fields.adoc[]
 
-=== 전체 이벤트 조회
+=== 이벤트 전체 조회
 
 `*Request*`
 
