fix testcode url 변경

--- a/src/docs/asciidoc/example.adoc
+++ b/src/docs/asciidoc/example.adoc
@@ -1,8 +1,10 @@
 :hardbreaks:
 ifndef::snippets[]
-:snippets: ./build/generated-snippets
+:resource-dir: ./snippets
 endif::[]
-
+ifdef::snippets[]
+:resource-dir: ./src/docs/asciidoc/snippets
+endif::[]
 :toc: left
 
 = Product
@@ -10,19 +12,19 @@ endif::[]
 === 상품 목록
 `*Request*`
 
-include::{snippets}/product-list/http-request.adoc[]
+include::{resource-dir}/product-list/http-request.adoc[]
 
 `*Parameters*`
 
-include::{snippets}/product-list/request-parameters.adoc[]
+include::{resource-dir}/product-list/request-parameters.adoc[]
 
 `*Response*`
 
-include::{snippets}/product-list/http-response.adoc[]
+include::{resource-dir}/product-list/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/product-list/response-fields.adoc[]
+include::{resource-dir}/product-list/response-fields.adoc[]
 
 '''
 
@@ -31,20 +33,20 @@ include::{snippets}/product-list/response-fields.adoc[]
 === 이벤트 응모
 `*Request*`
 
-include::{snippets}/eventparticipant/curl-request.adoc[]
+include::{resource-dir}/eventparticipant/curl-request.adoc[]
 
 `*Parameters*`
 
-include::{snippets}/eventparticipant/request-body.adoc[]
+include::{resource-dir}/eventparticipant/request-body.adoc[]
 
 `*Response*`
 
-include::{snippets}/eventparticipant/http-response.adoc[]
+include::{resource-dir}/eventparticipant/http-response.adoc[]
 
 
 `*Fields*`
 
-include::{snippets}/eventparticipant/response-fields.adoc[]
+include::{resource-dir}/eventparticipant/response-fields.adoc[]
 
 ---
 
@@ -52,44 +54,44 @@ include::{snippets}/eventparticipant/response-fields.adoc[]
 
 `*Request*`
 
-include::{snippets}/eventparticipant-check/http-request.adoc[]
+include::{resource-dir}/eventparticipant-check/http-request.adoc[]
 
 `*Parameters*`
 
-include::{snippets}/eventparticipant-check/request-body.adoc[]
+include::{resource-dir}/eventparticipant-check/request-body.adoc[]
 
 `*Response*`
 
-include::{snippets}/eventparticipant-check/response-body.adoc[]
+include::{resource-dir}/eventparticipant-check/response-body.adoc[]
 
 `*Fields*`
 
-include::{snippets}/eventparticipant-check/response-fields.adoc[]
+include::{resource-dir}/eventparticipant-check/response-fields.adoc[]
 
 === 유저 이벤트 응모 리스트
 
 `*Request*`
 
-include::{snippets}/user-eventparticipant/http-request.adoc[]
+include::{resource-dir}/user-eventparticipant/http-request.adoc[]
 
 `*response*`
 
-include::{snippets}/user-eventparticipant/http-response.adoc[]
+include::{resource-dir}/user-eventparticipant/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/user-eventparticipant/response-fields.adoc[]
+include::{resource-dir}/user-eventparticipant/response-fields.adoc[]
 
 === 셀러 이벤트 응모 리스트
 
 `*Request*`
 
-include::{snippets}/seller-eventparticipant/http-request.adoc[]
+include::{resource-dir}/seller-eventparticipant/http-request.adoc[]
 
 `*response*`
 
-include::{snippets}/seller-eventparticipant/http-response.adoc[]
+include::{resource-dir}/seller-eventparticipant/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/seller-eventparticipant/response-fields.adoc[]
+include::{resource-dir}/seller-eventparticipant/response-fields.adoc[]
