--- a/src/docs/asciidoc/example.adoc
+++ b/src/docs/asciidoc/example.adoc
@@ -1,8 +1,10 @@
 :hardbreaks:
 ifndef::snippets[]
-:snippets: ./build/generated-snippets
+:resource-dir: ./snippets
 endif::[]
-
+ifdef::snippets[]
+:resource-dir: ./src/docs/asciidoc/snippets
+endif::[]
 :toc: left
 
 = Product
@@ -29,15 +31,15 @@ include::{snippets}/product-list/response-fields.adoc[]
 
 `*Request*`
 
-include::{snippets}/createEvent/http-request.adoc[]
+include::{resource-dir}/event-create/http-request.adoc[]
 
 `*Response*`
 
-include::{snippets}/createEvent/http-response.adoc[]
+include::{resource-dir}/event-create/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/createEvent/response-fields.adoc[]
+include::{resource-dir}/event-create/response-fields.adoc[]
 
 == 이벤트 조회
 
@@ -45,73 +47,74 @@ include::{snippets}/createEvent/response-fields.adoc[]
 
 `*Request*`
 
-include::{snippets}/eventById/http-request.adoc[]
+include::{resource-dir}/event-id/http-request.adoc[]
 
 `*Response*`
 
-include::{snippets}/eventById/http-response.adoc[]
+include::{resource-dir}/event-id/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/eventById/response-fields.adoc[]
+include::{resource-dir}/event-id/response-fields.adoc[]
 
 === 셀러 ID로 목록 조회
 
 `*Request*`
 
-include::{snippets}/eventBySellerId/http-request.adoc[]
+include::{resource-dir}/event-sellerId/http-request.adoc[]
 
 `*Response*`
 
-include::{snippets}/eventBySellerId/http-response.adoc[]
+include::{resource-dir}/event-sellerId/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/eventBySellerId/response-fields.adoc[]
+include::{resource-dir}/event-sellerId/response-fields.adoc[]
 
 === 이벤트 전체 조회
 
 `*Request*`
 
-include::{snippets}/allEvents/http-request.adoc[]
+include::{resource-dir}/event-all/http-request.adoc[]
 
 `*Response*`
 
-include::{snippets}/allEvents/http-response.adoc[]
+include::{resource-dir}/event-all/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/allEvents/response-fields.adoc[]
+include::{resource-dir}/event-all/response-fields.adoc[]
+
 === 검색 조건으로 이벤트 목록 조회
 
 `*Request*`
 
-include::{snippets}/eventBySearch/http-request.adoc[]
+include::{resource-dir}/event-search/http-request.adoc[]
 `*Parameters*`
 
-include::{snippets}/eventBySearch/request-parameters.adoc[]
+include::{resource-dir}/event-search/request-parameters.adoc[]
 
 `*Response*`
 
-include::{snippets}/eventBySearch/http-response.adoc[]
+include::{resource-dir}/event-search/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/eventBySearch/response-fields.adoc[]
+include::{resource-dir}/event-search/response-fields.adoc[]
 
 == 이벤트 삭제
 
 `*Request*`
 
-include::{snippets}/deleteEvent/http-request.adoc[]
+include::{resource-dir}/event-delete/http-request.adoc[]
 
 `*Response*`
 
-include::{snippets}/deleteEvent/http-response.adoc[]
+include::{resource-dir}/event-delete/http-response.adoc[]
 
 `*Fields*`
 
-include::{snippets}/deleteEvent/response-fields.adoc[]
+include::{resource-dir}/event-delete/response-fields.adoc[]
 
 
 
