--- a/src/docs/asciidoc/snippets/coupon-assign/http-response.adoc
+++ b/src/docs/asciidoc/snippets/coupon-assign/http-response.adoc
@@ -12,23 +12,14 @@ Expires: 0
 X-Frame-Options: DENY
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Tue, 01 Nov 2022 06:34:15 GMT
+Date: Tue, 01 Nov 2022 06:33:14 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
-Content-Length: 287
+Content-Length: 97
 
 {
   "success" : true,
-  "message" : "기본 회원가입 성공",
-  "data" : {
-    "id" : 46,
-    "email" : "user2@naver.com",
-    "name" : "user2",
-    "nickname" : null,
-    "phone" : null,
-    "token" : null,
-    "password" : null,
-    "passwordConfirmation" : null
-  }
+  "message" : "사용자에게 쿠폰 배정 성공",
+  "data" : null
 }
 ----
