Feat: Test에 data Rollback 동작 추가

--- a/src/docs/asciidoc/snippets/coupon-add-seller/http-response.adoc
+++ b/src/docs/asciidoc/snippets/coupon-add-seller/http-response.adoc
@@ -12,17 +12,18 @@ Expires: 0
 X-Frame-Options: DENY
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Tue, 01 Nov 2022 06:33:14 GMT
+Date: Tue, 01 Nov 2022 09:39:04 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
-Content-Length: 230
+Content-Length: 222
 
 {
   "success" : true,
   "message" : "쿠폰 등록 성공",
   "data" : {
+    "couponId" : 20,
     "couponName" : "크리스마스 기념 쿠폰",
-    "sellerName" : "정다은/컴퓨터공학전공",
+    "sellerName" : "r",
     "type" : "AMOUNT",
     "cnt" : 5
   }
