--- a/src/docs/asciidoc/snippets/coupon-list-user/http-response.adoc
+++ b/src/docs/asciidoc/snippets/coupon-list-user/http-response.adoc
@@ -12,7 +12,7 @@ Expires: 0
 X-Frame-Options: DENY
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Tue, 01 Nov 2022 06:33:14 GMT
+Date: Tue, 01 Nov 2022 09:39:05 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
 Content-Length: 815
@@ -41,8 +41,8 @@ Content-Length: 815
     "number" : 0,
     "sort" : {
       "empty" : true,
-      "sorted" : false,
-      "unsorted" : true
+      "unsorted" : true,
+      "sorted" : false
     },
     "first" : true,
     "numberOfElements" : 1,
