--- a/src/docs/asciidoc/snippets/get-product-by-seller/http-request.adoc
+++ b/src/docs/asciidoc/snippets/get-product-by-seller/http-request.adoc
@@ -1,6 +1,6 @@
 [source,http,options="nowrap"]
 ----
-GET /api/v1/product/list?storeName=&category=&productName= HTTP/1.1
+GET /api/v1/product/seller/list?productId=1 HTTP/1.1
 Accept: application/json, application/javascript, text/javascript, text/json
 Content-Type: application/json
 Host: parabole.com:52344
