Docs: REST DOCS 추가 및 수정 [#176]

--- a/src/docs/asciidoc/snippets/update-order/response-body.adoc
+++ b/src/docs/asciidoc/snippets/update-order/response-body.adoc
@@ -1,8 +1,8 @@
 [source,options="nowrap"]
 ----
 {
-  "success" : true,
-  "message" : "주문 수정 완료",
+  "success" : false,
+  "message" : "해당 일련번호를 가지는 쿠폰이 존재하지 않습니다.",
   "data" : null
 }
 ----
