--- a/src/docs/asciidoc/snippets/update-order/http-response.adoc
+++ b/src/docs/asciidoc/snippets/update-order/http-response.adoc
@@ -1,19 +1,19 @@
 [source,http,options="nowrap"]
 ----
-HTTP/1.1 200 OK
+HTTP/1.1 404 Not Found
 Vary: Origin
 Vary: Access-Control-Request-Method
 Vary: Access-Control-Request-Headers
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Wed, 02 Nov 2022 00:30:09 GMT
+Date: Thu, 03 Nov 2022 05:56:03 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
-Content-Length: 81
+Content-Length: 131
 
 {
-  "success" : true,
-  "message" : "주문 수정 완료",
+  "success" : false,
+  "message" : "해당 일련번호를 가지는 쿠폰이 존재하지 않습니다.",
   "data" : null
 }
 ----
