--- a/src/docs/asciidoc/snippets/update-order/request-body.adoc
+++ b/src/docs/asciidoc/snippets/update-order/request-body.adoc
@@ -2,6 +2,11 @@
 ----
 {
   "userId" : 3,
+  "orderId" : 1,
+  "orderInfoRequestList" : [ {
+    "orderInfoIdList" : [ 1, 2 ],
+    "couponSerialNo" : "_쿠폰시리얼넘버_"
+  } ],
   "orderPayState" : "NAVER_PAY"
 }
 ----
