--- a/src/docs/asciidoc/snippets/product-list/curl-request.adoc
+++ b/src/docs/asciidoc/snippets/product-list/curl-request.adoc
@@ -1,6 +1,6 @@
 [source,bash]
 ----
-$ curl 'https://parabole.com:52344/api/v1/product/list?storeName=&category=&productName=' -i -X GET \
+$ curl 'https://parabole.com:55988/api/v1/product/list?sellerId=1&storeName=&category=&productName=' -i -X GET \
     -H 'Accept: application/json, application/javascript, text/javascript, text/json' \
     -H 'Content-Type: application/json'
 ----
