--- a/src/docs/asciidoc/snippets/product-list/httpie-request.adoc
+++ b/src/docs/asciidoc/snippets/product-list/httpie-request.adoc
@@ -1,6 +1,6 @@
 [source,bash]
 ----
-$ http GET 'https://parabole.com:52344/api/v1/product/list?storeName=&category=&productName=' \
+$ http GET 'https://parabole.com:55988/api/v1/product/list?sellerId=1&storeName=&category=&productName=' \
     'Accept:application/json, application/javascript, text/javascript, text/json' \
     'Content-Type:application/json'
 ----
