--- a/src/docs/asciidoc/snippets/product-list-by-sellerId/http-response.adoc
+++ b/src/docs/asciidoc/snippets/product-list-by-sellerId/http-response.adoc
@@ -6,7 +6,7 @@ Vary: Access-Control-Request-Method
 Vary: Access-Control-Request-Headers
 Content-Type: application/json
 Transfer-Encoding: chunked
-Date: Thu, 03 Nov 2022 07:54:10 GMT
+Date: Sun, 06 Nov 2022 01:52:12 GMT
 Keep-Alive: timeout=60
 Connection: keep-alive
 Content-Length: 2437
@@ -65,14 +65,14 @@ Content-Length: 2437
         "unsorted" : true
       },
       "offset" : 0,
-      "pageNumber" : 0,
       "pageSize" : 20,
-      "paged" : true,
-      "unpaged" : false
+      "pageNumber" : 0,
+      "unpaged" : false,
+      "paged" : true
     },
     "last" : true,
-    "totalElements" : 3,
     "totalPages" : 1,
+    "totalElements" : 3,
     "size" : 20,
     "number" : 0,
     "sort" : {
