--- a/src/docs/asciidoc/snippets/product-list-by-sellerId/response-body.adoc
+++ b/src/docs/asciidoc/snippets/product-list-by-sellerId/response-body.adoc
@@ -54,14 +54,14 @@
         "unsorted" : true
       },
       "offset" : 0,
-      "pageNumber" : 0,
       "pageSize" : 20,
-      "paged" : true,
-      "unpaged" : false
+      "pageNumber" : 0,
+      "unpaged" : false,
+      "paged" : true
     },
     "last" : true,
-    "totalElements" : 3,
     "totalPages" : 1,
+    "totalElements" : 3,
     "size" : 20,
     "number" : 0,
     "sort" : {
