--- a/src/docs/asciidoc/snippets/create-orderinfo/response-body.adoc
+++ b/src/docs/asciidoc/snippets/create-orderinfo/response-body.adoc
@@ -1,8 +1,8 @@
 [source,options="nowrap"]
 ----
 {
-  "success" : false,
-  "message" : "결제할 상품을 추가할 수 없습니다.",
+  "success" : true,
+  "message" : "결제목록에 상품을 추가했습니다.",
   "data" : null
 }
 ----
