--- a/src/docs/asciidoc/snippets/create-product/http-request.adoc
+++ b/src/docs/asciidoc/snippets/create-product/http-request.adoc
@@ -3,22 +3,15 @@
 POST /api/v1/product HTTP/1.1
 Accept: application/json, application/javascript, text/javascript, text/json
 Content-Type: application/json
-Host: parabole.com:56065
-Content-Length: 372
+Host: parabole.com:62062
+Content-Length: 177
 
 {
-  "productId" : null,
+  "userId" : 1,
   "productName" : "테스트",
-  "sellerId" : 1,
-  "storeName" : "TEST",
-  "productStatus" : 1,
   "productRemains" : 30,
   "productPrice" : 500,
   "productCategory" : "테스트",
-  "productThumbnailImg" : "img.jpg",
-  "productCreatedAt" : null,
-  "productUpdatedAt" : null,
-  "productDeletedAt" : null,
-  "productIsDeleted" : false
+  "productThumbnailImg" : "img.jpg"
 }
 ----
