--- a/src/docs/asciidoc/snippets/create-product/request-body.adoc
+++ b/src/docs/asciidoc/snippets/create-product/request-body.adoc
@@ -1,18 +1,11 @@
 [source,options="nowrap"]
 ----
 {
-  "productId" : null,
+  "userId" : 1,
   "productName" : "테스트",
-  "sellerId" : 1,
-  "storeName" : "TEST",
-  "productStatus" : 1,
   "productRemains" : 30,
   "productPrice" : 500,
   "productCategory" : "테스트",
-  "productThumbnailImg" : "img.jpg",
-  "productCreatedAt" : null,
-  "productUpdatedAt" : null,
-  "productDeletedAt" : null,
-  "productIsDeleted" : false
+  "productThumbnailImg" : "img.jpg"
 }
 ----
