--- a/src/docs/asciidoc/snippets/get-orderinfo-list-by-user/response-fields.adoc
+++ b/src/docs/asciidoc/snippets/get-orderinfo-list-by-user/response-fields.adoc
@@ -15,126 +15,126 @@
 
 |`+data.orderId+`
 |`+Number+`
-|주문 정보
+|주문 ID
 
 |`+data.cnt+`
 |`+Number+`
-|주문 정보
+|주문한 상품들의 총 개수
 
 |`+data.orderBySellerDtoList+`
 |`+Array+`
-|주문 정보
+|판매자별로 정렬된 상품 목록
 
 |`+data.orderBySellerDtoList.[].sellerId+`
 |`+Number+`
-|주문 정보
+|판매자 ID
 
 |`+data.orderBySellerDtoList.[].storeName+`
 |`+String+`
-|주문 정보
+|판매자 상호 명
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos+`
 |`+Array+`
-|주문 정보
+|주문한 상품 정보
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].id+`
 |`+Number+`
-|주문 정보
+|상세 주문 ID
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].state+`
 |`+String+`
-|주문 정보
+|상세 주문 상태
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].userId+`
 |`+Number+`
-|주문 정보
+|유저 ID
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].userEmail+`
 |`+String+`
-|주문 정보
+|유저 이메일
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productId+`
 |`+Number+`
-|주문 정보
+|상품 ID
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productName+`
 |`+String+`
-|주문 정보
+|상품 명
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productCnt+`
 |`+Number+`
-|주문 정보
+|주문한 상품 개수
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productRemain+`
 |`+Null+`
-|주문 정보
+|남아있는 상품 재고
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productPrice+`
 |`+Number+`
-|주문 정보
+|상품 총 가격
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productDiscountPrice+`
 |`+Number+`
-|주문 정보
+|상품 할인 가격
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].productThumbnailImg+`
 |`+Null+`
-|주문 정보
+|상품 썸네일
 
 |`+data.orderBySellerDtoList.[].orderInfoResponseDtos.[].updatedAt+`
 |`+Null+`
-|주문 정보
+|주문 수정 날짜
 
 |`+data.orderBySellerDtoList.[].couponDto+`
 |`+Object+`
-|주문 정보
+|쿠폰 정보
 
 |`+data.orderBySellerDtoList.[].couponDto.rateCoupon+`
 |`+Array+`
-|주문 정보
+|할인율 쿠폰 목록
 
 |`+data.orderBySellerDtoList.[].couponDto.rateCoupon.[].couponName+`
 |`+String+`
-|주문 정보
+|쿠폰 이름
 
 |`+data.orderBySellerDtoList.[].couponDto.rateCoupon.[].serialNo+`
 |`+String+`
-|주문 정보
+|쿠폰 시리얼 넘버
 
 |`+data.orderBySellerDtoList.[].couponDto.rateCoupon.[].storeName+`
 |`+String+`
-|주문 정보
+|쿠폰을 발행한 판매자 상호 명
 
 |`+data.orderBySellerDtoList.[].couponDto.rateCoupon.[].type+`
 |`+String+`
-|주문 정보
+|쿠폰 타입(할인율)
 
 |`+data.orderBySellerDtoList.[].couponDto.rateCoupon.[].discountValue+`
 |`+Number+`
-|주문 정보
+|할인되는 퍼센티지
 
 |`+data.orderBySellerDtoList.[].couponDto.amountCoupon+`
 |`+Array+`
-|주문 정보
+|금액 할인 쿠폰 목록
 
 |`+data.orderBySellerDtoList.[].couponDto.amountCoupon.[].couponName+`
 |`+String+`
-|주문 정보
+|쿠폰 이름
 
 |`+data.orderBySellerDtoList.[].couponDto.amountCoupon.[].serialNo+`
 |`+String+`
-|주문 정보
+|쿠폰 시리얼 넘버
 
 |`+data.orderBySellerDtoList.[].couponDto.amountCoupon.[].storeName+`
 |`+String+`
-|주문 정보
+|쿠폰을 발행한 판매자 상호 명
 
 |`+data.orderBySellerDtoList.[].couponDto.amountCoupon.[].type+`
 |`+String+`
-|주문 정보
+|쿠폰 타입(금액)
 
 |`+data.orderBySellerDtoList.[].couponDto.amountCoupon.[].discountValue+`
 |`+Number+`
-|주문 정보
+|할인되는 금액
 
 |===
