--- a/src/docs/asciidoc/snippets/update-order-delivery/http-request.adoc
+++ b/src/docs/asciidoc/snippets/update-order-delivery/http-request.adoc
@@ -3,7 +3,7 @@
 PATCH /api/v1/order HTTP/1.1
 Accept: application/json, application/javascript, text/javascript, text/json
 Content-Type: application/json
-Host: parabole.com:54152
+Host: parabole.com:64716
 Content-Length: 403
 
 {
@@ -16,8 +16,8 @@ Content-Length: 403
   "addressSimple" : "광진구",
   "addressDetail" : "12-33",
   "deliveryComment" : "문앞에 두고 연락주세요",
-  "orderState" : "PAY_COMPLETE",
-  "orderInfoState" : "DELIVERY",
+  "orderState" : "BEFORE_PAY",
+  "orderInfoState" : "BEFORE_PAY",
   "payState" : "TOSS"
 }
 ----
