--- a/src/docs/asciidoc/snippets/update-order-delivery/httpie-request.adoc
+++ b/src/docs/asciidoc/snippets/update-order-delivery/httpie-request.adoc
@@ -10,10 +10,10 @@ $ echo '{
   "addressSimple" : "광진구",
   "addressDetail" : "12-33",
   "deliveryComment" : "문앞에 두고 연락주세요",
-  "orderState" : "PAY_COMPLETE",
-  "orderInfoState" : "DELIVERY",
+  "orderState" : "BEFORE_PAY",
+  "orderInfoState" : "BEFORE_PAY",
   "payState" : "TOSS"
-}' | http PATCH 'https://parabole.com:54152/api/v1/order' \
+}' | http PATCH 'https://parabole.com:64716/api/v1/order' \
     'Accept:application/json, application/javascript, text/javascript, text/json' \
     'Content-Type:application/json'
 ----
