--- a/src/docs/asciidoc/snippets/update-order/httpie-request.adoc
+++ b/src/docs/asciidoc/snippets/update-order/httpie-request.adoc
@@ -4,11 +4,11 @@ $ echo '{
   "userId" : 3,
   "orderId" : 1,
   "orderInfoRequestList" : [ {
-    "orderInfoIdList" : [ 1, 2 ],
+    "orderInfoIdList" : [ 1, 2, 3, 4 ],
     "couponSerialNo" : "_쿠폰시리얼넘버_"
   } ],
   "orderPayState" : "NAVER_PAY"
-}' | http POST 'https://parabole.com:54098/api/v1/order' \
+}' | http POST 'https://parabole.com:64201/api/v1/order' \
     'Accept:application/json, application/javascript, text/javascript, text/json' \
     'Content-Type:application/json'
 ----
