--- a/src/docs/asciidoc/event.adoc
+++ b/src/docs/asciidoc/event.adoc
@@ -9,7 +9,7 @@ endif::[]
 
 = link:index.html[The Parabole]
 
-== 이벤트
+== 이벤트 등록
 
 `*Request*`
 
@@ -21,48 +21,13 @@ include::{resource-dir}/event-create/http-response.adoc[]
 
 `*Fields*`
 
-
-include::{resource-dir}/event-delete/response-fields.adoc[]
-
-'''
-
-
-
 include::{resource-dir}/event-create/response-fields.adoc[]
 
 == 이벤트 조회
 
 === 이벤트 ID로 단건 조회
 
-
-=== 이벤트 응모
 `*Request*`
-
-
-include::{resource-dir}/eventparticipant/curl-request.adoc[]
-
-`*Parameters*`
-
-include::{resource-dir}/eventparticipant/request-body.adoc[]
-
-`*Response*`
-
-include::{resource-dir}/eventparticipant/http-response.adoc[]
-
-
-`*Fields*`
-
-include::{resource-dir}/eventparticipant/response-fields.adoc[]
-
-'''
-
-=== 이벤트 응모 체크
-
-`*Request*`
-
-include::{resource-dir}/eventparticipant-check/http-request.adoc[]
-
-'''
 
 include::{resource-dir}/event-id/http-request.adoc[]
 
@@ -84,27 +49,7 @@ include::{resource-dir}/event-sellerId/http-request.adoc[]
 
 include::{resource-dir}/event-sellerId/http-response.adoc[]
 
-
-`*Parameters*`
-
-
-include::{resource-dir}/eventparticipant-check/request-body.adoc[]
-
-`*Response*`
-
-include::{resource-dir}/eventparticipant-check/response-body.adoc[]
-
 `*Fields*`
-
-include::{resource-dir}/eventparticipant-check/response-fields.adoc[]
-
-=== 유저 이벤트 응모 리스트
-
-`*Request*`
-
-include::{resource-dir}/user-eventparticipant/http-request.adoc[]
-
-'''
 
 include::{resource-dir}/event-sellerId/response-fields.adoc[]
 
@@ -127,13 +72,73 @@ include::{resource-dir}/event-all/response-fields.adoc[]
 `*Request*`
 
 include::{resource-dir}/event-search/http-request.adoc[]
+
 `*Parameters*`
 
 include::{resource-dir}/event-search/request-parameters.adoc[]
 
+`*Response*`
+
+include::{resource-dir}/event-search/http-response.adoc[]
+
+`*Fields*`
+
+include::{resource-dir}/event-search/response-fields.adoc[]
+
+== 이벤트 취소
+
+`*Request*`
+
+include::{resource-dir}/event-delete/http-request.adoc[]
+
+`*Response*`
+
+include::{resource-dir}/event-delete/http-response.adoc[]
+
+`*Fields*`
+
+include::{resource-dir}/event-delete/response-fields.adoc[]
+
+== 이벤트 응모
+
+=== 이벤트 응모
+
+`*Request*`
+
+include::{resource-dir}/eventparticipant/curl-request.adoc[]
+
+`*Parameters*`
+
+include::{resource-dir}/eventparticipant/request-body.adoc[]
+
+`*Response*`
+
+include::{resource-dir}/eventparticipant/http-response.adoc[]
+
+`*Fields*`
+
+include::{resource-dir}/eventparticipant/response-fields.adoc[]
+
+--- === 이벤트 응모 체크
+`*Request*`
+
+include::{resource-dir}/eventparticipant-check/http-request.adoc[]
+
+`*Response*`
+
+include::{resource-dir}/eventparticipant-check/response-body.adoc[]
+
+`*Fields*`
+
+include::{resource-dir}/eventparticipant-check/response-fields.adoc[]
+
+=== 유저 이벤트 응모 리스트
+
+`*Request*`
+
+include::{resource-dir}/user-eventparticipant/http-request.adoc[]
 
 `*response*`
-
 
 include::{resource-dir}/user-eventparticipant/http-response.adoc[]
 
@@ -154,25 +159,3 @@ include::{resource-dir}/seller-eventparticipant/http-response.adoc[]
 `*Fields*`
 
 include::{resource-dir}/seller-eventparticipant/response-fields.adoc[]
-
-'''
-
-include::{resource-dir}/event-search/http-response.adoc[]
-
-`*Fields*`
-
-include::{resource-dir}/event-search/response-fields.adoc[]
-
-== 이벤트 삭제
-
-`*Request*`
-
-include::{resource-dir}/event-delete/http-request.adoc[]
-
-`*Response*`
-
-include::{resource-dir}/event-delete/http-response.adoc[]
-
-`*Fields*`
-
-include::{resource-dir}/event-delete/response-fields.adoc[]
