--- a/src/docs/asciidoc/event.adoc
+++ b/src/docs/asciidoc/event.adoc
@@ -9,7 +9,8 @@ endif::[]
 
 = link:index.html[The Parabole]
 
-== 이벤트 등록
+== 이벤트
+=== 이벤트 등록
 
 `*Request*`
 
@@ -26,8 +27,6 @@ include::{resource-dir}/event-create/http-response.adoc[]
 `*Fields*`
 
 include::{resource-dir}/event-create/response-fields.adoc[]
-
-== 이벤트 조회
 
 === 이벤트 ID로 단건 조회
 
@@ -97,7 +96,7 @@ include::{resource-dir}/event-search/http-response.adoc[]
 
 include::{resource-dir}/event-search/response-fields.adoc[]
 
-== 이벤트 취소
+=== 이벤트 취소
 
 `*Request*`
 
@@ -135,7 +134,7 @@ include::{resource-dir}/eventparticipant/http-response.adoc[]
 
 include::{resource-dir}/eventparticipant/response-fields.adoc[]
 
---- === 이벤트 응모 체크
+=== 이벤트 응모 체크
 `*Request*`
 
 include::{resource-dir}/eventparticipant-check/http-request.adoc[]
